--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,103 @@
-.App {
+
+/* HomePage.css */
+
+.homepage-container {
+  background-image: url('./components/background.jpeg'); 
+  background-size: cover; 
+  background-position: center; 
+  background-repeat: no-repeat; 
+  color: white;
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  font-family: Arial, sans-serif;
+  min-height: 100vh; 
   display: flex;
   flex-direction: column;
-  align-items: center;
+  justify-content: space-between;
+}
+
+.homepage-header {
+  margin-top: 100px;
+  font-size: 25px;
+  color: white; 
+  padding: 20px;
+}
+
+.home-welcome {
+  background-color: rgba(0, 51, 102, 0.8);
+  padding: 20px;
+  border-radius: 10px; 
+  display: inline-block;
+}
+.home-intro
+{
+  margin-top: 60px;
+}
+
+.homepage-footer {
+  background-color: rgba(240, 248, 255, 0.8); 
+  padding: 10px;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+}
+
+.homepage-links {
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  gap: 20px;
+}
+
+.homepage-link {
+  color: #003366; 
+  text-decoration: none;
+  font-weight: bold;
+}
+
+.homepage-link:hover {
+  transform: scale(1.3);
+}
+.home-button {
+  background: linear-gradient(135deg, #6b73ff, #000dff);
+  border: none;
   color: white;
+  padding: 15px 30px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 20px 2px;
+  cursor: pointer;
+  border-radius: 12px;
+  transition: background 0.3s ease;
 }
 
-.App-link {
-  color: #61dafb;
+.home-button:hover {
+  background: linear-gradient(135deg, #000dff, #6b73ff);
+}
+.home-intropara
+{
+  font-size: 15px;
+  margin-left: 500px;
+  width: 600px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+/*................*/
+
+.input{
+border: solid 1.5px #9e9e9e;
+border-radius: 7px;
+background: none;
+padding: 15px;
+font-size: 18px;
+color: #f5f5f5;
+}
+.contact{
+  background-color: #003366;
+  text-align: center;
+  min-height: 800px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  color: white;
 }
